Place spinner in the correct spot on mobile

--- a/static/css/custom_1.css
+++ b/static/css/custom_1.css
@@ -328,7 +328,7 @@ body {
 	#spin{
 		float: none;
 		position: absolute;
-		right: 150px;
+		right: 160px;
 	}
 	.fc-calendar .fc-row,
 	.ie9 .fc-calendar .fc-row > div,
